[gd_scene load_steps=2 format=2]

[ext_resource path="res://Panels/Main/JobController.gd" type="Script" id=1]

[node name="JobController" type="VSplitContainer"]
margin_right = 386.0
margin_bottom = 562.0
size_flags_horizontal = 3
custom_constants/autohide = 0
script = ExtResource( 1 )

[node name="VBC1" type="VBoxContainer" parent="."]
margin_right = 386.0
margin_bottom = 275.0
rect_min_size = Vector2( 0, 150 )
size_flags_vertical = 3

[node name="PC" type="PanelContainer" parent="VBC1"]
margin_left = 142.0
margin_right = 244.0
margin_bottom = 28.0
size_flags_horizontal = 4

[node name="Label" type="Label" parent="VBC1/PC"]
margin_left = 7.0
margin_top = 7.0
margin_right = 95.0
margin_bottom = 21.0
text = "Available Jobs"

[node name="SC" type="ScrollContainer" parent="VBC1"]
margin_top = 32.0
margin_right = 386.0
margin_bottom = 275.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="AvailableJobsVBC" type="VBoxContainer" parent="VBC1/SC"]
margin_right = 386.0
margin_bottom = 243.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBC2" type="VBoxContainer" parent="."]
margin_top = 287.0
margin_right = 386.0
margin_bottom = 562.0
rect_min_size = Vector2( 0, 150 )
size_flags_vertical = 3

[node name="PC" type="PanelContainer" parent="VBC2"]
editor/display_folded = true
margin_left = 147.0
margin_right = 238.0
margin_bottom = 28.0
size_flags_horizontal = 4

[node name="Label" type="Label" parent="VBC2/PC"]
margin_left = 7.0
margin_top = 7.0
margin_right = 84.0
margin_bottom = 21.0
text = "Current Jobs"

[node name="SC" type="ScrollContainer" parent="VBC2"]
margin_top = 32.0
margin_right = 386.0
margin_bottom = 275.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="ActiveJobsVBC" type="VBoxContainer" parent="VBC2/SC"]
margin_right = 386.0
margin_bottom = 243.0
size_flags_horizontal = 3
size_flags_vertical = 3
